--- a/beranda.html
+++ b/beranda.html
@@ -16,7 +16,7 @@
   <header>
     <!-- Navbar -->
     <nav
-      class="w-full max-w-[1440px] mx-auto h-[94px] flex items-center justify-between px-5 md:px-20 py-[25px] bg-[#0F0F0F] text-white">
+      class="w-full mx-auto h-[94px] flex items-center justify-between px-5 md:px-20 py-[25px] bg-[#0F0F0F] text-white">
       <!-- Logo Chill -->
       <div class="flex items-center gap-[12px] w-[268px] h-[44px] md:gap-[80px] md:w-[520px] md:h-[44px]">
         <div class="flex items-center gap-[4px] w-auto h-[44px]">
